--- a/.github/workflows/generate_debug_build.yml
+++ b/.github/workflows/generate_debug_build.yml
@@ -19,6 +19,9 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Build release APK
         run: ./gradlew assembleReleaseDebug
 
